* 2010-09-07 added methods for better navigation in the class tree (findOverriddenMethod) - jr
* 2010-09-10 add method: Complex:abs to fit common usage - jr
* 2010-09-11 bug in audio rate mapping fixed, when new source object was inserted in a mapped node proxy - jr
* 2010-09-12 added Dwrand UGen - jr

Bugfixes:
---------
* 2010-07-10 protecting the server against malformatted SynthDef names - jr
* 2010-06-28 syntaxColorize fix for double-backslashes, thanks Patrick Borgeat for the patch - ds
* 2010-07-24 catch crash in the case that one tries to define a unique method using a return value directly - jr
* 2010-09-07 UGen:clip, :wrap, :fold now apply correctly to scalar-rate signals; also methodSelectorForRate tweak for which class is asked - ds
* 2010-09-09 fix a bug for trigger signals in Demand.kr that hold longer than one control period - jr
* 2010-09-12 fix bug: 2994009. LFPar and LFCub audio rate modulation frequency argument work now - jr



SuperCollider v3.4, released 2010-07
====================================

Headlines:
----------

* 2009-09-03 add support for Mac OS 10.5 and greater 64-bit builds of plugins and scsynth
* 2009-07-xx iphone support by Axel Balley added - ab
* 2009-07-21 EnvirGui added, a gui for livecoding/editing environments - adc
* 2009-07-24 Server.plotTree method for visualising the groups and synths on the server - sw
* 2009-07-31 mac osx text-completion feature now includes sclang objects - ds
* 2009-08-01 sclang now has a flag (Platform.ideName) for which IDE is in use (scapp, scvim, scel, sced, jsceclipse...) so that the same class-library can be used with different IDEs, enabling IDE-specific code as necessary - ds
* 2009-08-16 add emergency escape route: if sclang is caught in an infinite loop, send it a USR1 signal to break out of it - ds
* 2009-09-12 String:findRegexp and other regular expressions now available on linux as well as mac - mb,ds
* 2009-09-18 n_order and Server:reorder allow one to specify chains of nodes - sw